# squidguard

./: ANNOUNCE  CHANGELOG  CONFIGURATION  COPYING  FAQ  INSTALL  INSTALL.html  Makefile.am  Makefile.in  README  autogen.sh  configure  configure.ac  configure.in
contrib/squidGuardRobot/: squidGuardRobot.in
doc/: Makefile.am  Makefile.in  README  configuration.html  configuration.txt  faq.html  faq.txt  index.html  installation.html  installation.txt
samples/: .sample.conf.swp  Makefile.am  sample.conf.in  squidGuard-simple.cgi.in  squidGuard.cgi.in
samples/dest/: README
src/: Makefile.am  Makefile.in  config.h.in  lex.yy.c.flex  main.c  main.c.leh  main.c.new  sg.h  sg.h.in  sg.l  sg.y  sgDb.c  sgDiv.c  sgDiv.c.in  sgFree.c  sgLex.l  sgLog.c  sgParser.y  version.h  y.tab.c.bison  y.tab.h.bison
test/: Makefile.am  Makefile.in  test1.conf.in  test1.expected  test2.conf.in  test2.expected
